fix: keep source contracts Java 8 compatible